--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "axios": "^0.26.0",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
