--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "localforage": "^1.10.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "axios": "^0.26.0",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
