--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-select": "^5.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
