--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash.uniqueid": "^4.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.1",
     "react-select": "^5.3.2"
   },
