--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "localforage": "^1.10.0",
+    "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.uniqueid": "^4.0.1",
     "react": "^18.0.0",
