--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.26.0",
     "chart.js": "^4.1.2",
     "classnames": "^2.3.1",
+    "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.7",
     "localforage": "^1.10.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
