--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.1",
-    "react-select": "^5.3.2"
+    "react-select": "^5.3.2",
+    "tailwind-datepicker-react": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
