--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.uniqueid": "^4.0.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.1",
