--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finance-frontend",
+  "name": "got-crypto",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -27,12 +27,15 @@
     "tailwind-datepicker-react": "^1.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/lodash.isequal": "^4.5.8",
+    "@types/lodash.uniqueid": "^4.0.9",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.0",
-    "vite": "^2.9.9"
+    "typescript": "^5.6.2",
+    "vite": "^2.9.18"
   }
 }
