--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.26.0",
     "chart.js": "^4.1.2",
     "classnames": "^2.3.1",
+    "firebase": "^10.14.0",
+    "firebaseui": "^6.1.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.7",
     "localforage": "^1.10.0",
