--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/lodash.uniqueid": "^4.0.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-select": "^5.0.1",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.47",
