--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.uniqueid": "^4.0.1",
+    "node-fetch": "^2.6.7",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-currency-input-field": "^3.6.10",
