--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.1.2",
     "classnames": "^2.3.1",
     "firebase": "^10.14.0",
+    "firebase-admin": "^12.6.0",
     "firebaseui": "^6.1.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.7",
@@ -20,7 +21,6 @@
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.uniqueid": "^4.0.1",
-    "node-fetch": "^2.6.7",
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-currency-input-field": "^3.6.10",
