--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.1",
     "react-select": "^5.3.2",
