--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sentry/react": "^8.42.0",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^0.28.0",
     "chart.js": "^4.1.2",
