--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --cache ."
   },
   "dependencies": {
     "@sentry/react": "^8.42.0",
@@ -33,6 +34,9 @@
     "tailwind-datepicker-react": "^1.3.0"
   },
   "devDependencies": {
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+		"@eslint/compat": "^1.2.7",
+		"@eslint/js": "^9.21.0",
     "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.uniqueid": "^4.0.9",
     "@types/react": "^18.3.11",
@@ -40,9 +44,18 @@
     "@types/react-select": "^5.0.1",
     "@vitejs/plugin-react": "^1.3.2",
     "autoprefixer": "^10.4.7",
+    "eslint": "^9.21.0",
+		"eslint-config-prettier": "^10.1.1",
+		"eslint-import-resolver-typescript": "^4.2.2",
+		"eslint-plugin-import-x": "^4.9.0",
+		"eslint-plugin-perfectionist": "^4.10.1",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"globals": "^16.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.1.0",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.26.1",
     "vite": "^5.4.9"
   }
 }
