--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "got-crypto",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint --cache ."
-  },
-  "dependencies": {
-    "@sentry/react": "^8.42.0",
-    "@tanstack/react-query": "^5.59.15",
-    "axios": "^0.30.0",
-    "chart.js": "^4.4.7",
-    "classnames": "^2.3.1",
-    "firebase": "^10.14.0",
-    "firebase-admin": "^12.6.0",
-    "firebaseui": "^6.1.0",
-    "flowbite": "^1.6.3",
-    "flowbite-react": "^0.3.7",
-    "localforage": "^1.10.0",
-    "lodash.isempty": "^4.4.0",
-    "lodash.isequal": "^4.5.0",
-    "lodash.uniqueid": "^4.0.1",
-    "react": "^18.0.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-currency-input-field": "^3.6.10",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.53.1",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.2.1",
-    "react-select": "^5.3.2",
-    "tailwind-datepicker-react": "^1.3.0"
-  },
-  "devDependencies": {
-    "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
+	"name": "got-crypto",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+		"lint": "eslint --cache ."
+	},
+	"dependencies": {
+		"@sentry/react": "^8.42.0",
+		"@tanstack/react-query": "^5.59.15",
+		"axios": "^0.30.0",
+		"chart.js": "^4.4.7",
+		"classnames": "^2.3.1",
+		"firebase": "^10.14.0",
+		"firebase-admin": "^12.6.0",
+		"firebaseui": "^6.1.0",
+		"flowbite": "^1.6.3",
+		"flowbite-react": "^0.3.7",
+		"localforage": "^1.10.0",
+		"lodash.isempty": "^4.4.0",
+		"lodash.isequal": "^4.5.0",
+		"lodash.uniqueid": "^4.0.1",
+		"react": "^18.0.0",
+		"react-chartjs-2": "^5.2.0",
+		"react-currency-input-field": "^3.6.10",
+		"react-dom": "^18.0.0",
+		"react-hook-form": "^7.53.1",
+		"react-icons": "^4.4.0",
+		"react-router-dom": "^6.2.1",
+		"react-select": "^5.3.2",
+		"tailwind-datepicker-react": "^1.3.0"
+	},
+	"devDependencies": {
+		"@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
 		"@eslint/compat": "^1.2.7",
 		"@eslint/js": "^9.21.0",
-    "@types/lodash.isequal": "^4.5.8",
-    "@types/lodash.uniqueid": "^4.0.9",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-select": "^5.0.1",
-    "@vitejs/plugin-react": "^1.3.2",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^9.21.0",
+		"@types/lodash.isequal": "^4.5.8",
+		"@types/lodash.uniqueid": "^4.0.9",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.0",
+		"@types/react-select": "^5.0.1",
+		"@vitejs/plugin-react": "^1.3.2",
+		"autoprefixer": "^10.4.7",
+		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.1.1",
 		"eslint-import-resolver-typescript": "^4.2.2",
 		"eslint-plugin-import-x": "^4.9.0",
@@ -52,10 +53,12 @@
 		"eslint-plugin-react": "^7.37.4",
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"globals": "^16.0.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.1.0",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^5.4.18"
-  }
+		"postcss": "^8.4.47",
+		"prettier": "^3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^3.1.0",
+		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.26.1",
+		"vite": "^5.4.18"
+	}
 }
