--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "got-crypto",
+	"type": "module",
 	"private": true,
 	"version": "0.0.0",
 	"scripts": {
@@ -24,7 +25,7 @@
 		"lodash.isempty": "^4.4.0",
 		"lodash.isequal": "^4.5.0",
 		"lodash.uniqueid": "^4.0.1",
-		"react": "^18.0.0",
+		"react": "^18.3.0",
 		"react-chartjs-2": "^5.2.0",
 		"react-currency-input-field": "^3.6.10",
 		"react-dom": "^18.0.0",
