--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-		"lint": "eslint --cache ."
+		"lint": "eslint --cache .",
+		"postinstall": "flowbite-react patch"
 	},
 	"dependencies": {
 		"@sentry/react": "^8.42.0",
@@ -19,7 +20,7 @@
 		"firebase-admin": "^12.6.0",
 		"firebaseui": "^6.1.0",
 		"flowbite": "^1.6.3",
-		"flowbite-react": "^0.3.7",
+		"flowbite-react": "^0.11.7",
 		"localforage": "^1.10.0",
 		"lodash.isempty": "^4.4.0",
 		"lodash.isequal": "^4.5.0",
