--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@sentry/react": "^8.42.0",
 		"@tanstack/react-query": "^5.59.15",
+		"apexcharts": "^3.46.0",
 		"axios": "^0.30.0",
 		"chart.js": "^4.4.7",
 		"classnames": "^2.3.1",
